<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="@color/azure"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:padding="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:textAlignment="textEnd"
                android:textSize="40sp"
                />
            <TextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:textAlignment="textEnd"
                android:textSize="35sp"
                />

            <ImageButton
                android:id="@+id/dltbtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_gravity="end"
                android:src="@drawable/icontrans"
                android:background= "@color/purple"
                />


        </LinearLayout>
        <LinearLayout
            android:background="@color/greenYellow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".25"
                >
                <Button
                    android:id="@+id/clearbtn"
                    android:layout_width="0dp"
                    android:text="@string/_C"
                    android:textSize="40sp"
                    android:background="@color/orange_red"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    />
                <Button
                    android:id="@+id/rootbtn"
                    android:layout_width="0dp"
                    android:text="@string/sqrtRootSign"
                    android:background="@color/magenta"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/powerbtn"
                    android:layout_width="0dp"
                    android:text="@string/powerSign"
                    android:background="@color/magenta"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/addbtn"
                    android:layout_width="0dp"
                    android:text="@string/positiveSign"
                    android:background="@color/magenta"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".2"
                >
                <Button
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:text="@string/_7"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn8"
                    android:layout_width="0dp"
                    android:text="@string/_8"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn9"
                    android:layout_width="0dp"
                    android:text="@string/_9"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/subbtn"
                    android:layout_width="0dp"
                    android:background="@color/magenta"
                    android:text="@string/negativeSign"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".2"
                >

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:text="@string/_4"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:text="@string/_5"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:text="@string/_6"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/mulbtn"
                    android:layout_width="0dp"
                    android:text="@string/_x"
                    android:background="@color/magenta"
                    android:textSize="30sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".2"
                >
                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:text="@string/_1"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:text="@string/_2"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:text="@string/_3"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/divbtn"
                    android:layout_width="0dp"
                    android:text="@string/multiplySign"
                    android:background="@color/magenta"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight=".2"
                >
                <Button
                    android:id="@+id/dotbtn"
                    android:layout_width="0dp"
                    android:text="@string/dotSymbol"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/btn0"
                    android:layout_width="0dp"
                    android:text="@string/_0"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/equalbtn"
                    android:layout_width="0dp"
                    android:text="@string/equalSign"
                    android:background="@color/chocolate"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    />
                <Button
                    android:id="@+id/modbtn"
                    android:layout_width="0dp"
                    android:text="@string/modSign"
                    android:background="@color/magenta"
                    android:textSize="40sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>